# todo

./: README.md
.github/workflows/: rust.yml
solution/: Cargo.toml
solution/src/: lib.rs  parser.rs  query.rs  runner.rs  todo_list.rs
solution/tests/batches/: Bishibosh.in  Bishibosh.out  Flamespike-The-Crawler.in  Flamespike-The-Crawler.out  add.in  done.in  search.in
