[package]
name = "todo_swamp"
version = "0.1.0"
authors = ["Jonn Mostovoy <jm@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"

[dependencies]
rand = "0.7"

[dependencies.nom]
version = "5"
features = ["regexp"]
